# petrock-nova

./: LICENSE  README.md  amplify.yaml  petrock-nova.code-workspace
backend/: .env.sample  .gitignore  Makefile  README.md  docker-compose.yaml  env.local.json  main.py  pyproject.toml  requirements.txt  template.yaml  test_diary_repository.py
backend/app/ai/bedrock/: pet_avatar_image_client.py  pet_avator_image_client.py  pet_care_advice_client.py  pet_care_notes_client.py  pet_care_tasks_client.py  pet_chat_assisstant.py  pet_chat_assistant.py  pet_picture_description_client.py
backend/app/ai/dtos/: pet_picture_description.py
backend/app/ai/interface/: pet_avatar_image_client.py  pet_avator_image_client.py  pet_care_advice_client.py  pet_care_notes_client.py  pet_care_tasks_client.py  pet_chat_assistant.py  pet_picture_description_client.py
backend/app/api/: dependencies.py
backend/app/api/routers/: chat_router.py  diary_router.py  pet_router.py  s3_router.py  user_router.py
backend/app/api/schemas/: chat_schema.py  diary_schema.py  pet_schema.py  user_schema.py
backend/app/exceptions/: avatar_image_generation_exception.py  care_notes_generation_exception.py  care_tasks_generation_exception.py  chat_response_exception.py  diary_creation_exception.py  pet_creation_exception.py  pet_not_found_exception.py  picture_description_exception.py  prompt_not_found_exception.py
backend/app/models/: chat.py  diary.py  pet.py  types.py  user.py
backend/app/repositories/dynamodb/: chat_repository.py  diary_repository.py  pet_repository.py  user_repository.py
backend/app/repositories/interface/: chat_repository.py  diary_repository.py  image_repository.py  pet_repository.py  user_repository.py
backend/app/repositories/s3/: image_repository.py
backend/app/services/chat_service/: chat_service.py  get_chat_service.py
backend/scripts/: start_api.py  test_diary_api.py  test_pet_api.py  test_user_api.py
frontend/: .env.development  (+8 more)
infrastructure/: .gitignore  Makefile  README.md  docker-compose.yaml  payload.json  pyproject.toml  response.json  samconfig.toml  template.yaml
infrastructure/seeds/: seed_diary.py  seed_pet.py
infrastructure/templates/: dynamoDB.yaml  dynamodb.yaml  lambda.yaml  lamda.yaml  s3.yaml
(+120 files in other folders)
