[project]
name = "petrock-nova-api"
version = "0.0.0"
description = "Petrock Novaのバックエンド"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.1",
    "fastapi[standard]>=0.115.14",
    "mangum>=0.19.0",
    "pydantic>=2.11.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

ignore = [
    "I001", # unsorted imports
    "B008", # function-call-in-default-argument
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.39.1",
    "ruff>=0.12.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "uv run python ./scripts/start_api.py"
