[project]
name = "petrock-nova-api"
version = "0.0.0"
description = "Petrock Novaのバックエンド"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools>=3.18.0",
    "boto3>=1.39.1",
    "fastapi[standard]>=0.115.14",
    "mangum>=0.19.0",
    "pydantic>=2.11.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

ignore = [
    "I001", # unsorted imports
    "B008", # function-call-in-default-argument
    "SIM102", # collapsible-if
    "B904", # raise-without-from-inside-except
]

[dependency-groups]
dev = [
    "boto3-stubs[bedrock-agent,bedrock-agent-runtime,bedrock-runtime,essential,secretsmanager]>=1.39.11",
    "inquirer>=3.4.0",
    "ipykernel>=6.30.0",
    "requests>=2.32.4",
    "ruff>=0.12.1",
]
