[project]
name = "petrock-nova-infra"
version = "0.0.0"
description = "Petrock Novaのインフラストラクチャ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools[validation]>=3.17.0",
    "aws-sam-cli-local>=1.70.0",
    "boto3>=1.39.3",
    "boto3-stubs[essential]>=1.38.46",
]
